# MacSandboxUtilities

./: CMakeLists.txt  README.md
src/: SandboxFileManager.h  SandboxFileManager.m
